feat: add form to input new city

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <form action="" method="get">
+      <input type="search" name="city" id="city" placeholder="City" required />
+      <button type="submit">Submit</button>
+    </form>
+  </body>
 </html>
