feat: add ability to switch between celcius  and  fahrenheit

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <ul>
+      <li>
+        <input type="radio" name="unit" id="temp_c" checked />
+        <label for="temp_c">C</label>
+      </li>
+      <li>
+        <input type="radio" name="unit" id="temp_f" />
+        <label for="temp_f">F</label>
+      </li>
+    </ul>
     <form action="" method="get">
       <div class="controls">
         <input
