--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <button type="submit">Submit</button>
       </div>
       <output name="weather" for="city">
+        <span class="location"></span>
         <span class="temperature"></span>
       </output>
     </form>
