feat: show additional weather info (humidity and feels like)

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <body>
     <ul>
       <li>
-        <input type="radio" name="unit" id="temp_c" checked />
+        <input type="radio" name="unit" id="c" checked />
         <label for="temp_c">C</label>
       </li>
       <li>
-        <input type="radio" name="unit" id="temp_f" />
+        <input type="radio" name="unit" id="f" />
         <label for="temp_f">F</label>
       </li>
     </ul>
@@ -33,6 +33,8 @@
       <output name="weather" for="city">
         <span class="location"></span>
         <span class="temperature"></span>
+        <span class="feels-like"></span>
+        <span class="humidity"></span>
       </output>
     </form>
   </body>
