feat: display weather icon

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
       </div>
       <output name="weather" for="city">
         <span class="location"></span>
+        <img src="#" class="condition-icon" />
         <span class="temperature"></span>
         <span class="feels-like"></span>
+        <span class="condition-text"></span>
         <span class="humidity"></span>
       </output>
     </form>
